Added tests and edit functionality

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,4 +2,6 @@
 <p>Description: <%= @category.description %></p>
 
 <br/>
+<%= link_to 'Edit Category', edit_category_path %>
+<br/>
 <%= link_to 'Back', categories_path %>
