--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,6 @@
 <%= link_to 'Add Task', new_category_task_path %>
 <ol>
   <% @tasks.each do |task| %>
-    <li><%= task.name %></li>
+    <li><%= link_to task.name, category_task_path(@category, task) %></li>
   <% end %>
 </ol>
