--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,11 +10,10 @@
       </div>
     <% end %>
   
-    <div>
+    <div class="form-container">
       <%= form.text_field :name %>
-    </div>
-  
-    <div>
-      <%= form.submit %>
+      <div class="form-submit">
+        <%= form.submit %>
+      </div>
     </div>
 <% end %>
