--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,7 @@
-<%= link_to 'Back', category_path(@category) %>
-<h2>Add New Task</h2>
-<%= render 'form', task: @task %>
+<div class="container">
+    <%= link_to 'Back', category_path(@category) %>
+    <h2>Add New Task</h2>
+    <%= render 'form', task: @task %>
+</div>
+
   
