--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Edit Category</h1>
 
-<%= render 'form', category: @category %>
-
-<%= link_to 'Back', categories_path %>
+<div class="container">
+    <%= link_to 'Back', categories_path %>
+    <h1>Edit Category</h1>
+    <%= render 'form', category: @category %>
+</div>
