--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,14 @@
-<h1>Categories</h1>
+<%= stylesheet_link_tag 'categories' %>
 
-<%= link_to 'New Category', new_category_path %>
+<div class="container">
+  <h1>Categories</h1>
 
-<ul>
+  <span class="add-category-link">
+    <%= link_to 'Add Category', new_category_path %>
+  </span>
+  <h4>Name</h4>
   <% @categories.each do |category| %>
-    <li><%= link_to category.name, category %></li>
+    <span class="category-item">|  <%= link_to category.name, category %>  |</span>
   <% end %>
-</ul>
+</div>
+
