--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,6 @@
-<%= link_to 'Back', category_path(@category) %>
-<h2>Edit Task</h2>
-<%= render 'form', task: @task %>
+
+<div class="container">
+    <%= link_to 'Back', category_path(@category) %>
+    <h2>Edit Task</h2>
+    <%= render 'form', task: @task %>
+</div>
