--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,15 @@
-<%= link_to 'Back', category_tasks_path(@category) %>
-<h2>Task Name: <%= @task.name %></h2>
-<%= link_to 'Edit Task', edit_category_task_path(@category, @task) %>
-<br/>
-<%= button_to 'Delete Task', category_task_path(@category, @task), method: :delete %>
+<div class="container">
+    <%= link_to 'Back', category_tasks_path(@category) %>
+    <h4><%= @task.name %></h4>
+    <br/>
+    <div class="add-category-link">
+        <%= link_to 'Edit Task', edit_category_task_path(@category, @task) %>
+    </div>
+   
+    <div class="delete-btn">
+        <%= button_to 'Delete Task', category_task_path(@category, @task), method: :delete %>
+    </div>
+ 
+</div>
+
+
