Added few modifications

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <%= link_to 'Back', category_path(@category) %>
+    <%= link_to 'Back to Category', category_tasks_path(@category) %>
     <h2>Edit Task</h2>
     <%= render 'form', task: @task %>
 </div>
