--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <%= link_to 'Back', category_tasks_path(@category) %>
+    <%= link_to 'Back to Task', category_tasks_path(@category) %>
     <h4><%= @task.name %></h4>
     <br/>
     <div class="add-category-link">
