--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <%= link_to 'Back', category_path(@category) %>
+  <%= link_to 'Back to Category', category_path(@category) %>
   <h4><%= @category.name%></h4>
   
   <span class="add-category-link">
